tests/errors/alfa/semantic_error12.alfa
// ****Error semantico en lin X: El indice en una operacion de indexacion tiene que ser de tipo entero.
main
{
    array int[10] vector;
    boolean b;
    int x;

    x = vector[b];
	
}